--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,12 @@
 body{
-	background-color: red;
+	margin: 40;
+}
+
+header{
+	background-color: #b2a1cd;
+	text-align: center; 
+}
+
+header h1{
+	color:white;
 }
