--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,10 +4,10 @@ body{
 
 
 header{
-	margin-top: 20;
+	padding-top: 50px;
 	background-color: #b2a1cd;
 	text-align: center; 
-	margin-bottom: 10;
+	padding-bottom: 50px;
 }
 
 
@@ -18,6 +18,7 @@ header img{
 
 header h1{
 	color:white;
+	font-family: Samsung Sharp Sans, Helvetica;
 }
 
 
