--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,17 +1,18 @@
 body{
-	margin: 40;
+	margin:0;
 	font-family: Samsung Sharp Sans, Helvetica;
 }
 
 
 header{
-	padding-top: 50px;
 	background-color: #b2a1cd;
 	text-align: center; 
+	padding-top: 50px;
 	padding-bottom: 50px;
 }
 
 h1, h2{font-family: Samsung Sharp Sans, Helvetica}
+
 
 header img{
 	height: 800px;	
@@ -20,6 +21,7 @@ header img{
 
 header h1{
 	color:white;
+	font-size: 50px;
 }
 
 
