--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,7 +7,7 @@ body{
 header{
 	background-color: #b2a1cd;
 	text-align: center; 
-	padding-top: 50px;
+	padding-top: 60px;
 	padding-bottom: 50px;
 }
 
@@ -24,5 +24,11 @@ header h1{
 	font-size: 50px;
 }
 
+
+
+
+main{
+	max-width: 800px;
+}
 
 
