--- a/CSS/index.css
+++ b/CSS/index.css
@@ -26,7 +26,7 @@ header h1{
 }
 
 main{
-	max-width: 800px;
+	max-width: 100%;
 	margin:80px;
 }
 
@@ -39,6 +39,7 @@ h2{
 	font-size: 35px;
 	color: #b2a1cd;
 }
+
 
 
 
