--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,8 @@
 body{
 	margin:0;
 	font-family: Samsung Sharp Sans, Helvetica;
+	line-height: 30px;
+
 }
 
 
@@ -36,8 +38,15 @@ main img{
 
 h2{
 	font-size: 35px;
+}
+
+a:hover{
 	color: #b2a1cd;
 }
+
+
+
+
 
 
 
