--- a/CSS/index.css
+++ b/CSS/index.css
@@ -46,6 +46,18 @@ a:hover{
 
 
 
+footer{
+	background-color: #b2a1cd;
+	text-align: center; 
+	color: white;
+
+}
+
+footer a{
+	color: white;
+}
+
+
 
 
 
