--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,6 +5,9 @@ body{
 }
 
 
+
+/*header style*/
+
 header{
 	background-color: #b2a1cd;
 	text-align: center; 
@@ -26,6 +29,10 @@ header h1{
 	font-size: 50px;
 }
 
+
+
+/*main style*/
+
 main{
 	max-width: 100%;
 	margin-top: 100px;
@@ -44,7 +51,6 @@ p.caption{
 }
 
 
-
 h2{
 	font-size: 35px;
 }
@@ -53,6 +59,9 @@ a:hover{
 	color: #b2a1cd;
 }
 
+
+
+/*footer style*/
 
 footer{
 	background-color: #b2a1cd;
